[tool.poetry]
name = "restaurant-api"
version = "0.1.0"
description = ""
authors = ["Juan David Salamanca <salamancajd14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.10.0"
black = "^24.4.2"
fastapi = "^0.111.0"
pydantic = "^2.7.2"
motor = "^3.4.0"
pydantic-settings = "^2.2.1"
bcrypt = "^4.1.3"
python-multipart = "^0.0.9"
pyjwt = "^2.8.0"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
asgi-lifespan = "==2.*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
